--- a/.github/workflows/space-shooter.yml
+++ b/.github/workflows/space-shooter.yml
@@ -1,10 +1,9 @@
-
 name: Update Space Shooter GIF
 
 on:
+  workflow_dispatch:
   schedule:
     - cron: "0 0 * * *"
-  workflow_dispatch:
 
 permissions:
   contents: write
@@ -18,7 +17,8 @@ jobs:
       - name: Create assets directory
         run: mkdir -p assets
 
-      - uses: czl9707/gh-space-shooter@v1
+      - name: Generate space shooter
+        uses: czl9707/gh-space-shooter@v1
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           output-path: assets/space-shooter.gif
